// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationSettings View has an enabled save button 1`] = `
<Base
  paddingVertical="x8"
>
  <Text
    size="x5"
    weight="bold"
  >
    Email Notifications
  </Text>
  <Divider
    color="gray-2"
    direction="horizontal"
    margin="x4"
    width="0.125rem"
  />
  <Base
    margin="x6"
  >
    <_default
      email=""
      isAddingEmail={false}
      onAddEmail={[MockFunction]}
      onEmailChange={[MockFunction]}
    />
  </Base>
  <Base
    margin="x4"
  >
    <_default
      appContacts={Array []}
      onDeleteContact={[MockFunction]}
      onNotificationPreferenceChanged={[MockFunction]}
    />
  </Base>
  <Flex
    alignChildrenHorizontal="end"
    direction="horizontal"
    gap="x4"
    margin="x12"
  >
    <Button
      disabled={false}
      grow={true}
      level="secondary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Cancel
    </Button>
    <Button
      disabled={false}
      grow={true}
      level="primary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Save
    </Button>
  </Flex>
</Base>
`;

exports[`NotificationSettings View renders correctly 1`] = `
<Base
  paddingVertical="x8"
>
  <Text
    size="x5"
    weight="bold"
  >
    Email Notifications
  </Text>
  <Divider
    color="gray-2"
    direction="horizontal"
    margin="x4"
    width="0.125rem"
  />
  <Base
    margin="x6"
  >
    <_default
      email=""
      isAddingEmail={false}
      onAddEmail={[MockFunction]}
      onEmailChange={[MockFunction]}
    />
  </Base>
  <Base
    margin="x4"
  >
    <_default
      appContacts={Array []}
      onDeleteContact={[MockFunction]}
      onNotificationPreferenceChanged={[MockFunction]}
    />
  </Base>
  <Flex
    alignChildrenHorizontal="end"
    direction="horizontal"
    gap="x4"
    margin="x12"
  >
    <Button
      disabled={false}
      grow={true}
      level="secondary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Cancel
    </Button>
    <Button
      disabled={true}
      grow={true}
      level="primary"
      size="medium"
      width="8rem"
    >
      Save
    </Button>
  </Flex>
</Base>
`;

exports[`NotificationSettings View renders correctly while loading 1`] = `
<Base
  paddingVertical="x8"
>
  <Text
    size="x5"
    weight="bold"
  >
    Email Notifications
  </Text>
  <Divider
    color="gray-2"
    direction="horizontal"
    margin="x4"
    width="0.125rem"
  />
  <Base
    margin="x6"
  >
    <_default
      email=""
      isAddingEmail={false}
      onAddEmail={[MockFunction]}
      onEmailChange={[MockFunction]}
    />
  </Base>
  <Base
    margin="x16"
  >
    <Skeleton
      active={true}
      color="white"
      maxWidth="60rem"
    >
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
    </Skeleton>
  </Base>
</Base>
`;

exports[`NotificationSettings View renders correctly while saving 1`] = `
<Base
  paddingVertical="x8"
>
  <Text
    size="x5"
    weight="bold"
  >
    Email Notifications
  </Text>
  <Divider
    color="gray-2"
    direction="horizontal"
    margin="x4"
    width="0.125rem"
  />
  <Base
    margin="x6"
  >
    <_default
      email=""
      isAddingEmail={false}
      onAddEmail={[MockFunction]}
      onEmailChange={[MockFunction]}
    />
  </Base>
  <Base
    margin="x4"
  >
    <_default
      appContacts={Array []}
      onDeleteContact={[MockFunction]}
      onNotificationPreferenceChanged={[MockFunction]}
    />
  </Base>
  <Flex
    alignChildrenHorizontal="end"
    direction="horizontal"
    gap="x4"
    margin="x12"
  >
    <Button
      disabled={true}
      grow={true}
      level="secondary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Cancel
    </Button>
    <Button
      disabled={true}
      grow={true}
      level="primary"
      size="medium"
      width="8rem"
    >
      <ProgressSpinner
        size="1.5rem"
      />
         Saving...
    </Button>
  </Flex>
</Base>
`;

exports[`NotificationSettings View renders correctly with error message 1`] = `
<Base
  paddingVertical="x8"
>
  <Text
    size="x5"
    weight="bold"
  >
    Email Notifications
  </Text>
  <Divider
    color="gray-2"
    direction="horizontal"
    margin="x4"
    width="0.125rem"
  />
  <Notification
    margin="x4"
    type="alert"
  >
    Something went wrong
  </Notification>
  <Base
    margin="x6"
  >
    <_default
      email=""
      isAddingEmail={false}
      onAddEmail={[MockFunction]}
      onEmailChange={[MockFunction]}
    />
  </Base>
  <Base
    margin="x4"
  >
    <_default
      appContacts={Array []}
      onDeleteContact={[MockFunction]}
      onNotificationPreferenceChanged={[MockFunction]}
    />
  </Base>
  <Flex
    alignChildrenHorizontal="end"
    direction="horizontal"
    gap="x4"
    margin="x12"
  >
    <Button
      disabled={false}
      grow={true}
      level="secondary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Cancel
    </Button>
    <Button
      disabled={true}
      grow={true}
      level="primary"
      size="medium"
      width="8rem"
    >
      Save
    </Button>
  </Flex>
</Base>
`;
